[package]
name = "uniquote"
version = "2.0.0"
authors = ["dylni"]
edition = "2018"
exclude = [".*", "/rustfmt.toml", "/tests"]
description = """
Quote strings for clear display in output
"""
repository = "https://github.com/dylni/uniquote"
readme = "README.md"
keywords = ["osstr", "path", "print", "quote", "unprintable"]
categories = ["command-line-interface", "no-std", "value-formatting", "wasm"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "uniquote_docs_rs"]
rustdoc-args = [
    "--cfg", "uniquote_docs_rs",
    "--extern-html-root-url", "alloc=https://doc.rust-lang.org",
    "--extern-html-root-url", "core=https://doc.rust-lang.org",
    "--extern-html-root-url", "std=https://doc.rust-lang.org",
    "-Zunstable-options",
]

[features]
default = ["std"]

alloc = []
std = ["alloc"]
