[package]
name = "uniquote"
version = "3.1.0"
authors = ["dylni"]
edition = "2018"
rust-version = "1.52.0"
exclude = [".*", "/rustfmt.toml", "/tests"]
description = """
Quote strings for clear display in output
"""
repository = "https://github.com/dylni/uniquote"
readme = "README.md"
keywords = ["osstr", "path", "print", "quote", "unprintable"]
categories = ["command-line-interface", "no-std", "value-formatting", "wasm"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]

alloc = []
std = ["alloc"]
